кнопка с залипанием отступы в редизайне розницы https://online.sbis.ru/opendoc.html?guid=b670c01d-78e8-49e8-8c32-fc3c95631325

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -142,6 +142,7 @@
 @button-group-vertical-item-margin:       0 0 1.75rem 0;
 // Normal default button
 @button-checked-border-width:             @button-border-width;
+@button-checked-padding:                  @button-padding;
 @button-checked-line-height:              @button-line-height;
 @button-checked-border:                   @button-active-border;
 @button-checked-bg:                       @button-bg-active;
