--- a/components/Mixins/TreeMixin/resources/searchRender.tmpl
+++ b/components/Mixins/TreeMixin/resources/searchRender.tmpl
@@ -6,7 +6,7 @@
    highlightText="{{viewCfg.highlightText}}"
    colorMarkEnabled="{{viewCfg.colorMarkEnabled}}"
    colorField="{{viewCfg.colorField}}"
-   enabled="{{viewCfg.allowEnterToFolder || viewCfg.task1173671799}}"
+   enabled="{{viewCfg.allowEnterToFolder || !!viewCfg.task1173671799}}"
    idProperty="{{viewCfg.idProperty}}"
    activableByClick="{{false}}"
    displayProperty="{{viewCfg.displayProperty}}"
