--- a/components/TreeDataGridView/resources/searchRender.tmpl
+++ b/components/TreeDataGridView/resources/searchRender.tmpl
@@ -7,7 +7,7 @@
                                   highlightText="{{viewCfg.highlightText}}"
                                   colorMarkEnabled="{{viewCfg.colorMarkEnabled}}"
                                   colorField="{{viewCfg.colorField}}"
-                                  enabled="{{viewCfg.allowEnterToFolder || viewCfg.task1173671799}}"
+                                  enabled="{{viewCfg.allowEnterToFolder || !!viewCfg.task1173671799}}"
                                   idProperty="{{viewCfg.idProperty}}"
                                   displayProperty="{{viewCfg.displayProperty}}"
                                   activableByClick="{{false}}"
