вынес логику работы с ссылками в кнопку https://online.sbis.ru/opendoc.html?guid=9d569e6a-542f-48ea-b1f4-00a99636263c
# Conflicts:
#	components/WSControls/Buttons/Button.tmpl

--- a/components/Button/Button.tmpl
+++ b/components/Button/Button.tmpl
@@ -9,6 +9,9 @@
       event:ontouchend="_onTouchEnd()"
       event:ontouchmove="_onTouchMove()"
       tabindex="{{_options.tabindex}}"
+      href="{{enabled ? href}}"
+      target="{{inNewTab ? '_blank'}}"
+      rel="{{href ? noreferrer}}"
       class="controls-Button controls-ButtonBase
  controls-Button-size__{{!!_options.size ? _options.size : 'default'}}
  controls-Button-color__{{_options.primary ? 'primary':'default'}}
