--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -89,7 +89,7 @@
 @link-font:                               @default-font-size @default-font-name;
 @link-text-color:                         @darkcyan-color;
 @link-disabled-text-color:                @gray-ccc-color;
-@link-text-decoration:                    none;
+@link-text-decoration:                    none !important;
 @link-text-alignment:                     center;
 @link-line-height:                        24px;
 @link-padding:                            0;
