--- a/components/Link/Link.less
+++ b/components/Link/Link.less
@@ -35,8 +35,10 @@
       margin-left: @button-icon-gap;
     }
   }
+  // TODO https://online.sbis.ru/opendoc.html?guid=e780f10e-3409-4390-98be-510dc06f546b
+  // убрать !important путем спиливания каскадов
   &.controls-Link__underline {
-    text-decoration: underline;
+    text-decoration: underline !important;
   }
 
   &.ws-disabled {
