размер иконки сортировки в табличном представлении по стандарту редизайна https://online.sbis.ru/opendoc.html?guid=8d539c16-c466-46a6-a0dd-b93bac8497f9

--- a/themes/carry/variables.less
+++ b/themes/carry/variables.less
@@ -23,6 +23,7 @@
 @data-grid-cell-padding:                        4px 8px;
 @data-grid-ms-first-content-cell-padding-left:  8px;
 @data-grid-header-cell-font-size:               18px;
+@data-grid-header-cell-icon-size:               @data-grid-header-cell-font-size;
 @data-grid-header-cell-height:                  22px;
 @data-grid-header-cell-padding:                 @data-grid-cell-padding;
 @data-grid-cell-line-height:                    34px;
