--- a/themes/genie/variables.less
+++ b/themes/genie/variables.less
@@ -366,6 +366,7 @@
 @data-grid-header-cell-padding:                 0 10px;
 @data-grid-header-cell-padding-side:            10px;
 @data-grid-header-cell-font-size:               11px;
+@data-grid-header-cell-icon-size:               @data-grid-header-cell-font-size;
 @data-grid-header-cell-text-color:              @gray-color;
 @data-grid-cell-height:                         @data-grid-header-cell-height;
 @data-grid-cell-line-height:                    21px;
