--- a/components/Button/Button.less
+++ b/components/Button/Button.less
@@ -123,7 +123,7 @@
 }
 
 @-moz-document url-prefix() {
-   .controls-Button__text {
+   .controls-Button .controls-Button__text {
       height: @button-text-height-ff;
    }
    .controls-Button__big .controls-Button__text {
