выравниваю ссылки по левому краю, т.к. некоторые есть места где растягивают родительский контейнер https://online.sbis.ru/opendoc.html?guid=63568f21-a18d-4f90-9681-252b9ac0b1ff

--- a/components/Link/Link.less
+++ b/components/Link/Link.less
@@ -70,6 +70,9 @@
      text-decoration: inherit;
      cursor: inherit;
   }
+  .controls-Button__wrapper {
+    .justify-content(flex-start);
+  }
 
   .controls-Button__text.controls-Button__emptyCaption {
     display: none;
