--- a/components/WSControls/Lists/resources/ItemContentTemplate.tmpl
+++ b/components/WSControls/Lists/resources/ItemContentTemplate.tmpl
@@ -1,3 +1,1 @@
-<div>
-   {{(_getPropertyValue(item, _options.displayProperty))|sanitize}}
-</div>
+<div>{{_getPropertyValue(item, _options.displayProperty)}}</div>
