при рестилизации полей ввода потеряли свойство https://online.sbis.ru/opendoc.html?guid=bbec6817-5c60-4c3a-9d5c-1ff3b4d0adf0

--- a/components/ComboBox/ComboBox.less
+++ b/components/ComboBox/ComboBox.less
@@ -22,6 +22,7 @@
       cursor: pointer;
       padding: @combo-box-arrow-padding;
       color: @combo-box-arrowDown-color;
+      text-decoration: none;
    }
    &.ws-has-focus{
       .controls-TextBox__afterFieldWrapper {
