убрал подчеркивание для кнопок (+ добавил стиль для проверки подчеркивания в демку кнопок) поправил кнопки в Большом выборе периода https://online.sbis.ru/opendoc.html?guid=e15c9680-4fcb-4083-a93f-df5d2677ecc1

--- a/components/Button/Button.less
+++ b/components/Button/Button.less
@@ -7,6 +7,7 @@
    border-width: @default-border-width;
    min-width: @button-min-width;
    line-height: normal;
+   text-decoration: none;
 
    &:active {
       text-decoration: none !important;
@@ -116,9 +117,6 @@
             background: @button-primary-hover-bg;
          }
       }
-   }
-   .controls-Button:hover {
-      text-decoration: none !important;
    }
 }
 
