--- a/components/WSControls/Buttons/resources/ButtonBase.less
+++ b/components/WSControls/Buttons/resources/ButtonBase.less
@@ -1,3 +1,6 @@
+.controls-ButtonBase:hover {
+  text-decoration: none !important;
+}
 .controls-Button__wrapper {
   .button-wrapper-default-style();
   &:before {
