--- a/components/DateRangeBigChoose/DateRangeBigChoose.less
+++ b/components/DateRangeBigChoose/DateRangeBigChoose.less
@@ -318,6 +318,7 @@
          .box-sizing(border-box);
          > a {
             width: @date-range-big-choose-left-right-width;
+            min-width: @date-range-big-choose-left-right-width;
             height: 100%;
             background-color: transparent;
             font-size: @date-range-big-choose-quarters-half-years-font-size;
