--- a/components/IconButton/IconButton.tmpl
+++ b/components/IconButton/IconButton.tmpl
@@ -1,4 +1,4 @@
-<span name="{{_options.name}}"
+<a name="{{_options.name}}"
       sbisname="{{_options.sbisname||_options.name}}"
       tabindex="{{_options.tabindex}}"
       newconfig="{{_options.__$config}}"
@@ -10,4 +10,4 @@
            <i class="controls-Button__icon js-controls-Button__icon {{_options._iconClass?_options._iconClass:_options.icon}}"></i>
         </ws:if>
     </span>
- </span>
+ </a>
