--- a/components/DateRangeBigChoose/DateRangeBigChoose.less
+++ b/components/DateRangeBigChoose/DateRangeBigChoose.less
@@ -208,6 +208,7 @@
             border: none;
             float: left;
             width: 16.6666%;
+            min-width: 16.6666%;
             font-size: @date-range-big-choose-years-range-font-size;
             text-align: center;
             background-color: transparent;
