ховер у DateRangeBigChoose и фикс подчеркивания в ФФ https://online.sbis.ru/opendoc.html?guid=bef9f681-df57-4ec9-b008-1e2dbaa663fc

--- a/components/DateRangeBigChoose/DateRangeBigChoose.less
+++ b/components/DateRangeBigChoose/DateRangeBigChoose.less
@@ -583,3 +583,18 @@ body:not(.ws-is-mobile-platform) {
       }
    }
 }
+
+
+.ws-is-desktop-platform {
+   .controls-DateRangeBigChoose {
+      .controls-DateRangeBigChoose__dates {
+         .controls-DateRangeBigChoose__dates-months {
+            a.controls-Button {
+               &:hover {
+                  color: @date-range-big-choose-month-hovered-color;
+               }
+            }
+         }
+      }
+   }
+}
