--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -151,6 +151,7 @@
 
 @date-range-big-choose-month-range-picker-color:         #000000;
 @date-range-big-choose-month-range-picker-bg-selected:   @date-range-big-choose-bg-selected-color;
+@date-range-big-choose-month-hovered-color:              @date-range-big-choose-months-color;
 
 
 // List view
