--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -1453,6 +1453,7 @@
 @date-range-big-choose-month-range-picker-bg-boundary-selected-color: @date-range-big-choose-bg-boundary-selected-color;
 @date-range-big-choose-month-range-picker-table-element-height:      11px;
 @date-range-big-choose-month-range-picker-table-element-font-size:   8px;
+@date-range-big-choose-month-hovered-color:                          @black-color;
 
 @date-range-big-choose-month-range-picker-today-border-color:         #ff7033;
 @date-range-big-choose-month-range-picker-weekend-color:              #EF463A;
