--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -542,9 +542,10 @@
 @date-range-big-choose-month-range-padding:0.2857rem;
 @date-range-big-choose-month-range-picker-bg-selected:  @date-range-big-choose-bg-selected-color;
 @date-range-big-choose-quarters-half-years-font-size:inherit;
+@date-range-big-choose-month-hovered-color:                          #B9E9FF;
 
 //Edit at place
-@edit-at-place-wrapper-text-area-padding: 0 .1785rem;
+@edit-at-place-wrapper-text-area-padding:  0.1785rem;
 @edit-at-place-wrapper-border-width:      .0357rem;
 @edit-at-place-editor-overlay-margin:     -.3571rem 0 0 -3571rem;
 @edit-at-place-editor-overlay-padding:    .3571rem ;
