https://online.sbis.ru/opendoc.html?guid=b5e634d6-743c-45c7-a89b-e84e00727337

--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -331,14 +331,16 @@ body .ws-field-button.ws-button-classic.sbisname-window-title-close.ws-enabled {
 
 .controls-Browser {
    .controls-Browser__tableCell-search {
-      width: 19.44rem;
       .controls-Browser__selectAllCheckBox {
          .align-self(center);
       }
    }
    .controls-Browser__search {
-      width: 18.61rem;
+      width: 21.4285rem;
    }
+  &.controls-Browser__search-small .controls-Browser__search {
+    width: 12.5rem;
+  }
 }
 
 .controls-ComboBox {
