откатил правки https://online.sbis.ru/opendoc.html?guid=71375ee0-21e4-4a2a-839b-870ccdca637d

--- a/components/Button/Button.less
+++ b/components/Button/Button.less
@@ -65,6 +65,7 @@
    &.controls-Button__big {
       font-size: @button-large-font-size;
       height: @button-large-height;
+      line-height: @default-height;
       .border-radius(@button-large-border-radius);
       .controls-Button__wrapper {
          padding: @button-big-padding;
