пустые пробелы между элементами https://online.sbis.ru/opendoc.html?guid=52b7d0d1-62f5-4c60-8514-0845d660e3d3

--- a/components/DateRangeBigChoose/DateRangeBigChoose.less
+++ b/components/DateRangeBigChoose/DateRangeBigChoose.less
@@ -419,6 +419,7 @@
       .controls-DateRangeBigChoose__dates-months {
          position: absolute;
          width: @date-range-big-choose-months-range-width;
+         font-size: 0;
          .range-vertical-button-bar-mixin();
 
          a.controls-Button {
