--- a/components/WSControls/Lists/resources/ItemContentTemplate.tmpl
+++ b/components/WSControls/Lists/resources/ItemContentTemplate.tmpl
@@ -1,1 +1,1 @@
-{{debug()}}<div>{{_getPropertyValue(item, _options.displayProperty)}}</div>
+<div>{{_getPropertyValue(item, _options.displayProperty)}}</div>
