Added virtual scroll to template
https://online.sbis.ru/opendoc.html?guid=2e1cc3b5-c2c8-41a5-bfb6-7c0b67b904db

--- a/components/WSControls/Lists/ListView2.tmpl
+++ b/components/WSControls/Lists/ListView2.tmpl
@@ -1,9 +1,20 @@
 <div class="controls-ListView {{multiselect !== false ? 'controls-ListView__multiselect' : 'controls-ListView__multiselect__off'}}{{ _serverRender ? ' controls-ListView__dataLoaded'}}"
      event:onmouseleave="_mouseLeave()">
+
+   <!-- Placeholder and trigger for activating page load in virtual scroll -->
+   <div class="controls-ListView__virtualScrollTopPlaceholder" >
+      <div class="controls-ListView__virtualScrollTopLoadTrigger" ></div>
+   </div>
+
    <div class="controls-ListView__itemsContainer">
       <ws:partial template="{{_itemsTemplate}}"
                   records="{{_records}}"
                   scope="{{...}}"/>
+   </div>
+
+   <!-- Placeholder and trigger for activating page load in virtual scroll -->
+   <div class="controls-ListView__virtualScrollBottomPlaceholder" >
+      <div class="controls-ListView__virtualScrollBottomLoadTrigger" ></div>
    </div>
 
    <ws:if data="{{loading}}">
