https://online.sbis.ru/opendoc.html?guid=b3d8590e-3bf6-48ad-bcd4-7bc119edd544

--- a/components/Suggest/SuggestView/SuggestView.less
+++ b/components/Suggest/SuggestView/SuggestView.less
@@ -7,7 +7,11 @@
    .controls-TabButtons {
       display: none;
    }
-   .ws-SwitchableArea {
+   .ws-SwitchableArea, .controls-ListView {
       padding-top: 0;
    }
+}
+
+.controls-suggestView .controls-ListView {
+   padding-top: @suggest-list-tab-padding-top;
 }
