--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -1062,6 +1062,7 @@
 @suggest-list-empty-padding:                    16px 0 16px 0;
 @suggest-list-footer-height:                    30px;
 @suggest-list-footer-padding:                   0 8px;
+@suggest-list-tab-padding-top:                  8px;
 
 
 
