--- a/components/TextBox/TextBox.less
+++ b/components/TextBox/TextBox.less
@@ -108,6 +108,7 @@
       color: @default-placeholder-color;
       font: inherit;
       text-align: inherit;
+      padding: @text-box-field-padding;
    }
 }
 .controls-TextBox__field-uppercase {
