поехало т.к. по умолчанию для ссылок установлено выравнивание по левому краю https://online.sbis.ru/opendoc.html?guid=7f70d10b-51cc-47f5-b6c9-416600d61f8a

--- a/components/Button/Button.less
+++ b/components/Button/Button.less
@@ -72,7 +72,9 @@
       }
    }
 
-
+   .controls-Button__wrapper {
+      .justify-content(center);
+   }
 
    &.ws-disabled {
       cursor: default;
