--- a/components/DateRangeBigChoose/DateRangeBigChoose.less
+++ b/components/DateRangeBigChoose/DateRangeBigChoose.less
@@ -244,6 +244,9 @@
          margin: 0 18px 0 14px;
          font-size: @date-range-big-choose-years-panel-current-year-button-font-size !important;
          line-height: @date-range-big-choose-years-panel-current-year-button-line-height !important;
+         .controls-Button__wrapper {
+            .justify-content(center);
+         }
 
          &:active {
             .box-sizing(border-box);
@@ -258,6 +261,9 @@
          border: 1px dotted transparent;
          font-size: @date-range-big-choose-years-panel-toggle-choose-year-button-font-size !important;
          line-height: @date-range-big-choose-years-panel-toggle-choose-year-button-line-height;
+         .controls-Button__wrapper {
+            .justify-content(center);
+         }
 
          &:hover {
             border: 1px dotted @gray-color;
