--- a/components/IconButton/IconButton.less
+++ b/components/IconButton/IconButton.less
@@ -69,6 +69,10 @@
       line-height: 38px !important;
    }
 
+   .controls-Button__wrapper {
+     .justify-content(center);
+   }
+
    &.ws-disabled {
      cursor: default;
      .controls-Button__icon {
