--- a/components/SelectorButton/SelectorButton.less
+++ b/components/SelectorButton/SelectorButton.less
@@ -23,6 +23,10 @@
    .controls-ListView__item:last-child:after {
       content: none;
    }
+
+   .controls-Button__wrapper {
+      .justify-content(flex-start);
+   }
 }
 
 .controls-SelectorButton__icon + .controls-SelectorButton__text:not(.ws-hidden) {
