--- a/components/SwitcherDouble/SwitcherDouble.less
+++ b/components/SwitcherDouble/SwitcherDouble.less
@@ -19,7 +19,7 @@
       }
    }
    .controls-SwitcherDouble__line {
-      &:extend(.ws-enabled.controls-Switcher .controls-Switcher__line);
+      &:extend(.ws-enabled.controls-Switcher.controls-Checked__checked .controls-Switcher__line);
    }
 }
 .ws-disabled.controls-SwitcherDouble .controls-SwitcherDouble__toggle {
@@ -33,7 +33,7 @@
       }
    }
    .controls-SwitcherDouble__line {
-      &:extend(.ws-disabled.controls-Switcher .controls-Switcher__line);
+      &:extend(.ws-disabled.controls-Switcher.controls-Checked__checked .controls-Switcher__line);
    }
 }
 body:not(.ws-is-mobile-platform) .ws-enabled.controls-SwitcherDouble .controls-SwitcherDouble__toggle:hover {
