https://online.sbis.ru/opendoc.html?guid=e906e565-3e3f-4df6-a3c8-c8a7ef32c12e

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -320,7 +320,7 @@
 @text-box-disabled-border-bottom:         @default-border-width solid rgba(102,170,221, .3);
 @text-box-after-width:                    .7142rem;
 @text-box-height:                         3rem;
-@text-box-overflow:                       initial;
+@text-box-overflow:                       ellipsis;
 //Formatted text box
 @formatted-text-box-wrapper-min-height:   @text-box-field-min-height;
 @formatted-text-box-field-padding:        0;
