цвет кнопки назад при нажатии по стандарту редизайна Престо https://online.sbis.ru/opendoc.html?guid=7050fe03-fd12-46dd-b0cc-190a69363fe9

--- a/components/BackButton/BackButton.less
+++ b/components/BackButton/BackButton.less
@@ -80,7 +80,7 @@
          text-decoration: none;
          .controls-Button__text {
             text-decoration: none;
-            color: @primary-color;
+            color: @back-button-caption-hover-color;
          }
       }
    }
