--- a/themes/genie/variables.less
+++ b/themes/genie/variables.less
@@ -429,6 +429,7 @@
 @controls-SelectorButton-align:                    middle;
 // BackButton
 @back-button-arrow-height:                         17px;
+@back-button-caption-active-color:                 @primary-color;
 // BreadCrumbs
 @breadcrumbs-smallItems-font-size:                 13px;
 @breadcrumbs-small-items-top:                      inherit;
