1. Исправил положение заголовка h1 2. Перенёс файлы item.js и item.tmpl внутрь папки Main

--- a/components/WSControls/VDOM/Main/Main.tmpl
+++ b/components/WSControls/VDOM/Main/Main.tmpl
@@ -18,7 +18,7 @@
         <!--<label for="toggle-all">Mark all as complete</label>-->
         <ul class="todo-list">
             <ws:for data="index,item in filteredList()">
-                <ws:WSControls.VDOM.Item.Item
+                <ws:WSControls.VDOM.Main.Item
                         title="{{ item.title }}"
                         completed="{{ item.completed }}"
                         item="{{ item }}"
