https://online.sbis.ru/opendoc.html?guid=3d6a33df-8980-4968-bf60-2fc15c422557

--- a/components/DropdownList/DropdownList.less
+++ b/components/DropdownList/DropdownList.less
@@ -228,8 +228,8 @@
    }
 
    .controls-DropdownList__pickerHead {
-      font-weight: bold;
-      color: #313E78;
+      font-weight: @DropdownList-picker-head-weight;
+      color: @DropdownList-picker-head-color;
       padding: @DropdownList-picker-head-padding;
       cursor: default;
       width: 100%;
@@ -243,9 +243,8 @@
          margin-top: -1px;
       }
       .controls-DropdownList__pickerHead {
-         background: #f4f4f4;
+         background: @DropdownList-picker-title-type-header-bg;
       }
-
    }
    &.controls-DropdownList__type-duplicateHeader {
       .controls-DropdownList__body {
