--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -1990,6 +1990,9 @@
 @DropdownList-picker-close-btn-right:                 6px;
 @DropdownList-picker-head-margin:                     0;
 @DropdownList-picker-head-padding:                    4px 8px;
+@DropdownList-picker-head-weight:                     bold;
+@DropdownList-picker-head-color:                      #313E78;
+@DropdownList-picker-title-type-header-bg:            #f4f4f4;
 @DropdownList-picker-head-duplicate-type-top-padding: 4px;
 @DropdownList-picker-hor-revert-head-margin:          @DropdownList-picker-head-margin;
 @DropdownList-picker-padding:                         4px 0;
