--- a/themes/prestonew/sizes.less
+++ b/themes/prestonew/sizes.less
@@ -78,7 +78,7 @@
 @DropdownList-picker-margin-top:                                                                                        0;//todo: krasilnikov
 @DropdownList-picker-border:                                                                                            0;//todo: krasilnikov
 @DropdownList-picker-padding:                                                                                           0;//todo: krasilnikov
-@DropdownList-picker-head-margin:                                                                                       2px 0 0 0;//todo: krasilnikov
+@DropdownList-picker-head-margin:                                                                                       0;//todo: krasilnikov
 @DropdownList-picker-head-padding:                                                                                      0 8px;//todo: krasilnikov
 @DropdownList-picker-head-duplicate-type-top-padding:                                                                   0px;//todo: krasilnikov
 @DropdownList-picker-menu-item-padding:                                                                                 5px 8px 4px 8px;
