--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -677,9 +677,12 @@
 @multiView-tile-selected-item-bg:         #E7F0F9;
 //DropdownList
 
-@DropdownList-border-color:               @default-text-color;
-@DropdownList-linkStyleHoverColor:		   rgb(187, 233, 255);
-@DropdownList-disabled-text:              #38546C;
+@DropdownList-border-color:                 @default-text-color;
+@DropdownList-linkStyleHoverColor:		     rgb(187, 233, 255);
+@DropdownList-disabled-text:                #38546C;
+@DropdownList-picker-title-type-header-bg:  #26B8FF;
+@DropdownList-picker-head-color:            #E4E4E4;
+@DropdownList-picker-head-weight:           normal;
 //ProgressBar
 @controls-ProgressBar-height:             1.3214rem;
 @controls-ProgressBar-width:              14.286rem;
