--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -185,6 +185,7 @@
 @DropdownList-picker-menu-item-base-color: #000;
 @DropdownList-border-color:               #000;
 @DropdownList-disabled-text:              #CCC;
+@DropdownList-picker-head-color:          #FFFFFF;
 //ProgressBar
 @controls-ProgressBar-first-color:        #2D68B5;
 @controls-ProgressBar-border-color:       #EAEAEA;
