реверстка кнопок https://online.sbis.ru/opendoc.html?guid=067068ab-4108-4054-a593-6e5861314847

--- a/components/SubmitPopup/SubmitPopup.less
+++ b/components/SubmitPopup/SubmitPopup.less
@@ -55,7 +55,7 @@
 .controls-SubmitPopup__button.controls-Button, .controls-SubmitPopup__button.controls-Link {
    margin: @controls-SubmitPopup-button-margin;
 }
-.controls-SubmitPopup__button.controls-Button {
+.controls-SubmitPopup__button.controls-Button.controls-Button-size__default {
    min-width: @controls-SubmitPopup-button-min-width;
    height: @controls-SubmitPopup-button-height;
 }
