поправил цвета элементов меню по стандарту редизайна престо/розницы https://online.sbis.ru/opendoc.html?guid=476cf7e6-a443-4992-afb8-cae5c58cba6d

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -274,7 +274,7 @@
 @menu-item-bg:                            #f0f5fb;
 @menu-item-font-size:                     @default-font-size;
 @menu-item-icon-16-margin:					   0.2142rem 0 0.2142rem 2.2857rem;
-@menu-item-hover-bg:                      #e1ecf6;
+@menu-item-hover-bg:                      #E0ECF5;
 @menu-item-hover-icon-color:              @primary-color!important;
 @menu-item-default-padding:               0 .57rem;
 @menu-item-icon-top-offset:               0.2805rem; // (3.57 - 3) /2
