--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -80,6 +80,9 @@
 // Menu
 @menu-header-caption-color:               #000;
 @popup-header-caption-color:              #fff;
+//MenuItem
+@menu-item-bg:                            @default-bg-color;
+@menu-item-hover-bg:                      #F0F5FB;
 // Text box
 @text-box-field-text-color:               #000;
 @text-box-border-color:                   #EAEAEA;
