--- a/components/FilterButton/FilterButtonArea/FilterButtonArea.less
+++ b/components/FilterButton/FilterButtonArea/FilterButtonArea.less
@@ -185,6 +185,17 @@
 	margin: @controls-filterButton-area-text-margin;
 }
 
+.controls__filterButton__picker .controls-FieldLink__Link.ws-enabled {
+	color: @controls-FieldLink-FilterButton-color;
+	// TODO https://online.sbis.ru/opendoc.html?guid=e780f10e-3409-4390-98be-510dc06f546b аналогично стилям ссылке
+	text-decoration: none !important;
+	
+	&.ws-enabled:hover {
+		color: @controls-FieldLink-FilterButton-color-hover;
+		text-decoration: underline;
+	}
+}
+
 .ws-is-desktop-platform {
 	.controls__filterButton__picker {
 		.controls__filterButton__area-header {
