--- a/components/TextArea/TextArea.less
+++ b/components/TextArea/TextArea.less
@@ -8,6 +8,7 @@
       }
    }
    .controls-TextArea__field {
+      position: absolute;
       line-height: @text-area-field-line-height;
       resize: none;
       overflow: auto;
@@ -26,7 +27,7 @@
       word-wrap: break-word;
       min-height: @text-area-field-line-height;
       max-height: 100%;
-      &.-empty {
+      &-empty {
           color: @default-placeholder-color;
       }
    }
@@ -60,14 +61,15 @@
       .generate-height(@i + 1);
    }
    .generate-height();
-}
-.controls-TextArea__heightInit {
-   .controls-TextArea__view {
-      position: absolute;
-      min-height: 0;
-   }
-   .controls-TextArea__field {
-      position: static;
-      height: 100%;
+
+   &.controls-TextArea__heightInit {
+      .controls-TextArea__view {
+         position: absolute;
+         min-height: 0;
+      }
+      .controls-TextArea__field {
+         position: static;
+         height: 100%;
+      }
    }
 }
