фикс с выравниванием "кнопки назад" по базовой линии https://online.sbis.ru/opendoc.html?guid=669003b5-7193-4e02-b166-ca3d5b469e1f

--- a/components/WSControls/Buttons/resources/ButtonBase.less
+++ b/components/WSControls/Buttons/resources/ButtonBase.less
@@ -7,3 +7,11 @@
     content: "\200b";
   }
 }
+// баг ие10, дочерний элемент контейнера с флексом неправильно рассчитывает свои размеры
+// вследствии чего обрезание текста происходит неверно
+.ws-is-ie10 {
+  .controls-Button__text {
+    display: inline-block;
+    -ms-flex-negative: 1;
+  }
+}
