--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -767,6 +767,7 @@
 @controls-Paging-btn-padding:             .2857rem;
 @controls-Paging-padding:                 0;
 @controls-movedialog-min-height:          3.5714rem;
+@controls-movedialog-max-width:           25rem;
 //ScrollContainer
 @controls-ScrollContainer-top-gradient-height:0.857rem;
 //Scrollbar
