less строит путь относительно файла, где объявлена переменная поэтому в престе/рознице отобразились изображения из онлайна https://online.sbis.ru/opendoc.html?guid=14de00e1-6fe3-4a38-abfd-5a3a31aefe2e

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -569,6 +569,7 @@
 @list-view-items-toolbar-icon-size:       1.32rem;
 @list-view-items-toolbar-menu-icon-size:  @icon-large-size;
 @touch-mode-items-toolbar-icon-margin-top:-0.86rem;
+@items-toolbar-bottom-style-background:   url('img/items-toolbar-bottom-style-background.png');
 @list-view-actions-active-bg:             @data-grid-bg;
 @list-view-actions-menu-icon-width:       @icon-small-size;
 @list-view-actions-menu-close-top:        .14rem;
