https://online.sbis.ru/opendoc.html?guid=3a5891b7-13d3-40bd-b9f0-add893bcaa56

--- a/components/MoneyTextBox/MoneyTextBox.less
+++ b/components/MoneyTextBox/MoneyTextBox.less
@@ -13,6 +13,7 @@
 
   .controls-MoneyTextBox__input {
     .flex-shrink();
+    .text-overflow();
     position:relative;
     width: 100%;
     height:100%;
