поправил заголовк панелей фильтров по стандартам редизайна Розницы https://online.sbis.ru/opendoc.html?guid=cbd024fc-0e72-43a0-acea-6c4a86764e9c

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -708,11 +708,12 @@
 @controls-filterButton-button-margin-right-align:.2857rem 0 .2857rem .2857rem;
 @controls-filterButton-button-margin-ff:  .5714rem 0 0 0;
 @controls-filterButton-area-text-weight:	normal;
-@controls-filterButton-button-arrow-margin:-.14rem;;
-@controls-filterButton-area-header-padding:.29rem 3rem .29rem .43rem;
+@controls-filterButton-button-arrow-margin:-.14rem;
+@controls-filterButton-area-header-padding:.29rem 3rem .29rem .86rem;
 @controls-filterButton-area-text-size:    1.43rem;
+@controls-filterButton-area-text-margin:   0 .86rem 0 0;
 @controls-filterButton-area-text-color:   @default-text-color;
-@controls-filterButton-clear-margin-right:.5714rem;
+@controls-filterButton-clear-margin-right: .86rem;
 @controls-filterButton-area-content-margin:0 .42857rem 0.75rem;
 @controls-filterButton-line-height:       1.4642rem;
 @controls-filterButton-filterLine-margin: 0;
