--- a/components/DataGridView/DataGridView.tmpl
+++ b/components/DataGridView/DataGridView.tmpl
@@ -1,6 +1,6 @@
 <div class="controls-DataGridView controls-ListView {{multiselect !== false ? 'controls-ListView__multiselect' : 'controls-ListView__multiselect__off' }}
             {{ startScrollColumn !== undefined ? ' controls-DataGridView__with-partScroll' : ''}}{{ _serverRender ? ' controls-ListView__dataLoaded'}}">
-    <ws:SBIS3.CONTROLS.Panel tabindex="{{1}}" class="controls-ListView__fakeFocusElement"/>
+    <ws:SBIS3.CONTROLS.Panel tabindex="{{1}}" class="controls-ListView__fakeFocusElement" allowChangeEnable="{{false}}"/>
     <div class="controls-AjaxLoader ws-hidden">
         <div class="controls-AjaxLoader__outer">
             <div class="controls-AjaxLoader__block">
