--- a/components/Mixins/CompositeViewMixin/CompositeViewMixin.tmpl
+++ b/components/Mixins/CompositeViewMixin/CompositeViewMixin.tmpl
@@ -3,7 +3,7 @@
             {{ startScrollColumn !== undefined ? 'controls-DataGridView__with-partScroll' }}
             {{ 'controls-CompositeView-' + viewMode }}
             {{ viewMode === 'tile' ? ('controls-CompositeView-tile__' + tileMode) }}{{ _serverRender ? ' controls-ListView__dataLoaded'}}">
-   <ws:SBIS3.CONTROLS.Panel tabindex="{{1}}" class="controls-ListView__fakeFocusElement"/>
+   <ws:SBIS3.CONTROLS.Panel tabindex="{{1}}" class="controls-ListView__fakeFocusElement" allowChangeEnable="{{false}}"/>
    <div class="controls-AjaxLoader ws-hidden">
       <div class="controls-AjaxLoader__outer">
          <div class="controls-AjaxLoader__block">
