https://online.sbis.ru/opendoc.html?guid=f70ecf14-c850-4823-b4fa-82840bc70ede

--- a/components/BackButton/BackButton.tmpl
+++ b/components/BackButton/BackButton.tmpl
@@ -9,5 +9,11 @@
       escapeCaptionHtml="{{ escapeCaptionHtml }}"
       command="{{command}}"
       commandArgs="{{commandArgs}}"
-      /><div class="controls-BackButton__arrow icon-16 icon-View icon-primary action-hover"></div>
+      /><ws:SBIS3.CONTROLS.Link
+        name="BackButton-arrow"
+        className="controls-BackButton__arrow controls-Link__disabledHover"
+        icon="icon-16 icon-View icon-primary action-hover"
+        tabindex="0"
+        activableByClick="{{false}}"
+      />
 </div>
