Выпилил лишний класс

--- a/components/OperationsPanel/OperationsPanel-components/OperationsMark/OperationsMark.tmpl
+++ b/components/OperationsPanel/OperationsPanel-components/OperationsMark/OperationsMark.tmpl
@@ -1,5 +1,5 @@
 <div>
-    <ws:SBIS3.CONTROLS.CheckBox class="controls-OperationsMark-checkBox js-controls-operationsPanel__action" name="controls-OperationsMark__checkBox">
+    <ws:SBIS3.CONTROLS.CheckBox class="controls-OperationsMark-checkBox" name="controls-OperationsMark__checkBox">
         <ws:threeState><ws:Boolean>true</ws:Boolean></ws:threeState>
     </ws:SBIS3.CONTROLS.CheckBox>
     <ws:SBIS3.CONTROLS.MenuLink name="controls-OperationsMark__menu"
