https://online.sbis.ru/opendoc.html?guid=00b6d5f2-75a4-41cd-9de9-250405ca6187

--- a/components/FieldLink/afterFieldWrapper.tmpl
+++ b/components/FieldLink/afterFieldWrapper.tmpl
@@ -24,6 +24,7 @@
             icon="icon-16 icon-size icon-ListView"
             tabindex="0"
             command="showSelector"
+            clickThrottle="{{true}}"
             />
    </ws:else>
     <ws:SBIS3.CONTROLS.Action.SelectorAction
