https://online.sbis.ru/opendoc.html?guid=e83706f9-165a-4a29-8bb7-b65345b6bbcc

--- a/components/Image/Image.tmpl
+++ b/components/Image/Image.tmpl
@@ -4,7 +4,7 @@
          class="controls-image__image{{avoidCache && !dataSource ? ' ws-hidden'}}"
          tooltip="{{tooltip}}"
          alt="{{tooltip || name}}"
-         src="{{!avoidCache || dataSource ? defaultImage}}"
+         src="{{!avoidCache || dataSource ? _templateImage}}"
       />
       <ws:if data="{{imageBar}}">
          <div class="controls-image__image-bar" style="display: none;">
