--- a/components/WSControls/Lists/resources/GroupTemplate.tmpl
+++ b/components/WSControls/Lists/resources/GroupTemplate.tmpl
@@ -1,3 +1,1 @@
-<div class="controls-GroupBy" data-group="{{groupId}}">
-    <ws:partial template="{{ groupContentTemplate }}" scope="{{...}}"></ws:partial>
-</div>
+<ws:partial template="{{ _defaultGroupItemTemplate }}" scope="{{...}}"></ws:partial>
