--- a/components/WSControls/Lists/resources/ItemsTemplate.tmpl
+++ b/components/WSControls/Lists/resources/ItemsTemplate.tmpl
@@ -1,20 +1,15 @@
 <div>
 <ws:if data="{{_display}}">
    <ws:for data="_getStartEnumerationPosition(); _curIndex < _stopIndex; _getNextEnumerationPosition();">
-       <ws:if data="{{ _display.at(_curIndex).getContents }}">
            <ws:partial
-                   template="{{_getItemTpl()}}"
-                   contentTemplate="{{_getItemContentTpl()}}"
-                   defaultItemTpl="{{_defaultItemTemplate}}"
+                   template="{{_getItemTpl(_display.at(_curIndex))}}"
                    scope="{{...}}"
+                   contentTemplate="{{_getItemContentTpl(_display.at(_curIndex))}}"
+                   defaultItemTpl="{{_defaultItemTemplate}}"
                    item="{{_display.at(_curIndex).getContents()}}"
                    projItem="{{_display.at(_curIndex)}}"
                    index="{{_curIndex}}"
                    itemData="{{_getItemData(_display.at(_curIndex), _curIndex)}}"/>
-       </ws:if>
-       <ws:else>
-           <ws:partial template="{{ item.tpl }}" scope="{{ item.data }}" />
-       </ws:else>
    </ws:for>
 </ws:if>
 </div>
