--- a/components/Suggest/Suggest.less
+++ b/components/Suggest/Suggest.less
@@ -19,13 +19,13 @@
   color: @suggest-picker-color;
   width: @suggest-picker-standard-width;
   border: @suggest-picker-border;
-  margin: @suggest-picker-margin;
+  margin-top: @suggest-picker-margin;
   .box-shadow(@suggest-picker-box-shadow);
   box-sizing: border-box;
   
   &.controls-popup-revert-vertical {
     .box-shadow(@suggest-picker-box-shadow-reverted);
-    margin: @suggest-picker-margin-reverted;
+    margin-top: @suggest-picker-margin-reverted;
   }
 
   .controls-ListView {
