--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -1032,8 +1032,8 @@
 @suggest-picker-border-radius:                  0;
 @suggest-picker-box-shadow:                     0 4px 8px rgba(0, 0, 0, 0.15);
 @suggest-picker-box-shadow-reverted:            0 -4px 8px rgba(0, 0, 0, 0.15);
-@suggest-picker-margin:                         -1px 0 0 0;
-@suggest-picker-margin-reverted:                1px 0 0 0;
+@suggest-picker-margin:                         -@default-border-width;
+@suggest-picker-margin-reverted:                @default-border-width;
 @suggest-picker-standard-width:                 500px;
 @suggest-picker-standard-height:                500px;
 @suggest-picker-color:                          initial;
