https://online.sbis.ru/opendoc.html?guid=0eba9a77-25ce-4c39-835a-e9a6af3f221b

--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -413,7 +413,7 @@ body {
 }
 
 body  .ws-window {
-   background-color: #293543;
+   background-color: #2C3E50;
    border-style: solid;
    border-color: #00a2ef;
    border-width: @default-border-width;
