https://online.sbis.ru/opendoc.html?guid=72484540-3ccf-4dda-99c7-d35c4424632c

--- a/components/SuggestTextBox/SuggestTextBox.less
+++ b/components/SuggestTextBox/SuggestTextBox.less
@@ -8,6 +8,15 @@
     color: @suggest-text-box-icon-cross-color;
     padding: 0 3px;//todo //(24 - 2 * 1 - 16)/2 = 3
   }
+  
+  &.controls-Picker__show {
+    border-color: @controls-FieldLink-border-color-picker-show;
+    background: @suggest-text-box-bg-show-picker-color;
+  
+    .controls-TextBox__field {
+      color: @suggest-text-box-bg-show-picker-font-color;
+    }
+  }
 
   &.controls-SuggestTextBox__withoutCross {
     .controls-TextBox__afterFieldWrapper {
