--- a/themes/online/colors.less
+++ b/themes/online/colors.less
@@ -41,6 +41,8 @@
 @text-box-bg-disabled:                                                                                                  @default-bg-color-disabled;
 //suggest-text-box
 @suggest-text-box-icon-cross-color:                                                                                     #8991A9;
+@suggest-text-box-bg-show-picker-color:                                                                                 @text-box-bg;
+@suggest-text-box-bg-show-picker-font-color:                                                                            @text-box-color;
 //field-link
 @fieldLink-link-color:                                                                                                  #8991A9;
 @fieldLink-link-color-hover:                                                                                            #313E78;
