--- a/themes/prestonew/colors.less
+++ b/themes/prestonew/colors.less
@@ -36,3 +36,6 @@
 @controls-filterLine-link-hover-color:                                                                                  @controls-filterLine-link-color;//todo: gerasimov
 //dd-list
 @DropdownList-header-bg:                                                                                                #C1D7F0;//todo: krasilnikov
+//suggest-text-box
+@suggest-text-box-bg-show-picker-color:                                                                                 #F0F5FB;
+@suggest-text-box-bg-show-picker-font-color:                                                                            #273B4D;
